--- a/main.html
+++ b/main.html
@@ -3,12 +3,12 @@
 <html>
 
 <head>
-	/<!-- <link rel="stylesheet" href="styles.css"> -->
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	
-<table border ="1"style=background-color:yellow>
+<table>
 	<caption>Student Details</caption>
 	<tr>
 		<th>NAME</th>
